--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -147,7 +147,7 @@ body {
     font-weight: bold;
   }
   .Second{
-    width: 300px;
+    max-width: 900px;
     display: flex;
     
   }
@@ -161,4 +161,121 @@ body {
     align-items: center;
     justify-content: space-between;
     max-width: 550px;
+  }
+
+  .burger1{
+    width: 25px;
+    background-color: #272727;
+    height: 2px;
+    margin: 5px;
+    border-radius: 20px;
+  }
+  .burger2{
+    width: 20px;
+    background-color: #272727;
+    height: 2px;
+    margin: 5px;
+    transition: 0.3s all linear;
+  }
+  .burger3{
+    background-color: #272727;
+    height: 2px;
+    width: 15px;
+    margin: 5px;
+    transition: 0.3s all linear;
+    
+  }
+  .Title{
+    margin : 20px;
+    display : flex;
+    align-items : center;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .burger{
+    cursor: pointer;
+  }
+  .Mobile{
+    display: none;
+  }
+  .desktop{
+    display: flex;
+  }
+  .Title div{
+    width: 50% !important;
+  }
+  @media screen and (max-width : 825px) {
+    .Mobile{
+      display: block;
+    }
+    .desktop{
+      display: none;
+    }
+    nav{
+      margin-right: 15px;
+      margin-left: 15px;
+    }
+    .Title{
+      flex-direction: column;
+    }
+    .Title div{
+      width: 100% !important;
+    }
+  }
+
+  .SideMenu{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 200px;
+    background-color: #FAF8F6;
+    border-right: 2px solid black;
+    transform: translateX(-2500px);
+    transition: 0.3s all linear;
+  }
+  .SideMenu ul{
+    display: flex;
+    flex-direction: column;
+    
+  }
+  .SideMenu ul li{
+    text-align: left;
+  }
+
+  .SideMenu .input{
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    justify-content: center;
+    width: 100%;
+  }
+  .SideMenu h1{
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  @media screen and (min-width : 1440px) {
+    .First h1{
+      font-size: 5rem;
+    }
+    .Title div{
+      width: 50% !important;
+    }
+    .First p{
+      font-size: 1.5rem;
+    }
+    .First{
+      max-width: 1000px;
+    }
+    .Second{
+      max-width: 1000px;
+    }
+    .Second img{
+      max-width: 1000px;
+    }
+    .Title{
+      margin: 50px;
+      justify-content: center;
+    }
   }
