--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  color: black;
+  color: #4A6FA5;
   background-color: #FAF8F6;
   font-family: 'Work Sans', sans-serif;
 }
@@ -48,10 +48,10 @@ body {
 
   }
   nav li:hover{
-    border-bottom: 2px solid black;;
+    border-bottom: 2px solid #4A6FA5;;
   }
   .active{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #4A6FA5;
   }
   nav{
       margin: 0%;
@@ -111,15 +111,15 @@ body {
 }
   
   nav button:hover{
-    border: 1px solid black;
+    border: 1px solid #4A6FA5;
     border-radius: 55px;
   }
 
   .First button{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      font-weight: bold;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: bold;
       font-size: large;
-      background-color: rgb(14, 0, 0);
+      background-color: #4A6FA5;
       color: rgb(235, 235, 235);
       padding: 12px;
       padding-left: 35px;
@@ -132,7 +132,7 @@ body {
   }
   .First button:active{
     border-radius: 25px;
-    background-color: black;
+    background-color: #4A6FA5;
     color: gainsboro;
     transform: scale(1.09);
   }
@@ -231,10 +231,10 @@ body {
     right: 0;
     height: 250px;
     overflow: hidden;
-    border-left: 1px solid black;
+    border-left: 1px solid #4A6FA5;
     width: 50%;
     background-color: #FAF8F6;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #4A6FA5;
     transform: translateY(60px);
     opacity: 0;
     transition: 0.4s all linear;
@@ -245,7 +245,7 @@ body {
     width: 50%;
     height: 1px;
     opacity: 1;
-    background-color: black;
+    background-color: #4A6FA5;
     position: absolute;
     left: 0;
     top: 60px;
@@ -322,3 +322,185 @@ body {
     z-index: -10;
     background-color: rgba(0, 0, 0, 0.267);
   }
+  .First p{
+    text-align: center;
+  }
+  .MainLogin{
+    height: calc(100vh - 60px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .MainLogin form{
+    width: 50%;
+    border: 1px solid #4A6FA5;
+    padding: 20px;
+    border-radius: 3px;
+  }
+  .MainLogin form input{
+    background-color: transparent;
+    outline: none;
+    width: 100%;
+  }
+  .LoginSec,.PasswordSec{
+    border: 1px solid #4A6FA5;
+    border-radius: 15px;
+    padding: 7px 03px;
+    margin: 5px;
+  }
+  .MainLogin form input[type=button]{
+    font-family: 'Work Sans', sans-serif;
+
+    font-weight: bold;
+    font-size: large;
+    background-image: linear-gradient(90deg,#304d78,#4A6FA5,#304d78);
+    color: rgb(235, 235, 235);
+    padding: 12px;
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    transition: 0.1s all linear;
+    user-select: none;
+  }
+
+  .MainLogin form input[type=button]:hover{
+    border-radius: 55px;
+  }
+  .MainLogin form input[type=button]:active{
+    border-radius: 25px;
+    background-color: #4A6FA5;
+    color: gainsboro;
+    transform: scale(1.09);
+  }
+
+  @media screen and (max-width : 550px) {
+    .MainLogin form{
+      width: 70%;
+    }
+  }
+
+  @import url('https://fonts.googleapis.com/css?family=Rubik:400,500&display=swap');
+ * {
+	 box-sizing: border-box;
+}
+ body {
+  font-family: 'Work Sans', sans-serif;
+}
+ .container {
+	 display: flex;
+	 height: calc(100vh - 45px);
+}
+ .left {
+	 overflow: hidden;
+	 display: flex;
+	 flex-wrap: wrap;
+	 flex-direction: column;
+	 justify-content: center;
+	 animation-name: left;
+	 animation-duration: 1s;
+	 animation-fill-mode: both;
+	 animation-delay: 1s;
+}
+ .right {
+	 flex: 1;
+	 background-color: black;
+	 transition: 1s;
+	 background-image: url(https://f.i.uol.com.br/fotografia/2019/09/27/15696107995d8e5c2f6ffe4_1569610799_5x2_lg.jpg);
+	 background-size: cover;
+	 background-repeat: no-repeat;
+	 background-position: center;
+}
+ .header > h2 {
+	 margin: 0;
+	 color: #4f46a5;
+}
+ .header > h4 {
+	 margin-top: 10px;
+	 font-weight: normal;
+	 font-size: 15px;
+	 color: rgba(0, 0, 0, .4);
+}
+ .form {
+	 max-width: 80%;
+	 display: flex;
+	 flex-direction: column;
+}
+ .form > p {
+	 text-align: right;
+}
+ .form > p > a {
+	 color: #000;
+	 font-size: 14px;
+}
+ .form-field {
+	 height: 46px;
+	 padding: 0 16px;
+	 border: 2px solid #ddd;
+	 border-radius: 4px;
+   font-family: 'Work Sans', sans-serif;
+	 outline: 0;
+	 transition: 0.2s;
+	 margin-top: 20px;
+}
+ .form-field:focus {
+	 border-color: #4f46a5;
+}
+ .form > button {
+	 padding: 12px 10px;
+	 border: 0;
+	 background: linear-gradient(to right, #4f46a5 0%, #4f46a5 100%);
+	 border-radius: 3px;
+	 margin-top: 10px;
+	 color: #fff;
+	 letter-spacing: 1px;
+	 font-family: 'Rubik', sans-serif;
+}
+ .animation {
+	 animation-name: move;
+	 animation-duration: 0.4s;
+	 animation-fill-mode: both;
+	 animation-delay: 2s;
+}
+ .a1 {
+	 animation-delay: 2s;
+   font-size: xx-large;
+}
+ .a2 {
+	 animation-delay: 2.1s;
+}
+ .a3 {
+	 animation-delay: 2.2s;
+}
+ .a4 {
+	 animation-delay: 2.3s;
+}
+ .a5 {
+	 animation-delay: 2.4s;
+}
+ .a6 {
+	 animation-delay: 2.5s;
+}
+ @keyframes move {
+	 0% {
+		 opacity: 0;
+		 visibility: hidden;
+		 transform: translateY(-40px);
+	}
+	 100% {
+		 opacity: 1;
+		 visibility: visible;
+		 transform: translateY(0);
+	}
+}
+ @keyframes left {
+	 0% {
+		 opacity: 0;
+		 width: 0;
+	}
+	 100% {
+		 opacity: 1;
+		 padding: 20px 40px;
+		 width: 440px;
+	}
+}
