--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,8 +18,8 @@
 }
 
 body {
-  color: #4A6FA5;
-  background-color: #FAF8F6;
+  color: #002734;
+  background-color: #e0e5e9;
   font-family: 'Work Sans', sans-serif;
 }
   nav ul{
@@ -48,10 +48,10 @@ body {
 
   }
   nav li:hover{
-    border-bottom: 2px solid #4A6FA5;;
+    border-bottom: 2px solid #002734;;
   }
   .active{
-    border-bottom: 2px solid #4A6FA5;
+    border-bottom: 2px solid #002734;
   }
   nav{
       margin: 0%;
@@ -111,7 +111,7 @@ body {
 }
   
   nav button:hover{
-    border: 1px solid #4A6FA5;
+    border: 1px solid #002734;
     border-radius: 55px;
   }
 
@@ -119,7 +119,7 @@ body {
     font-family: 'Work Sans', sans-serif;
     font-weight: bold;
       font-size: large;
-      background-color: #4A6FA5;
+      background-color: #002734;
       color: rgb(235, 235, 235);
       padding: 12px;
       padding-left: 35px;
@@ -132,7 +132,7 @@ body {
   }
   .First button:active{
     border-radius: 25px;
-    background-color: #4A6FA5;
+    background-color: #002734;
     color: gainsboro;
     transform: scale(1.09);
   }
@@ -153,7 +153,7 @@ body {
     
   }
   .Second img{
-    width: 100%;
+    width: 80%;
   }
   .First {
     margin-top: 20px;
@@ -203,7 +203,7 @@ body {
     display: flex;
   }
   .Title div{
-    width: 50% !important;
+    width: 100% !important;
   }
   @media screen and (max-width : 825px) {
     .Mobile{
@@ -218,9 +218,16 @@ body {
     }
     .Title{
       flex-direction: column;
+      align-items: flex-start;
+      padding-left: 20px;
     }
     .Title div{
       width: 100% !important;
+    }
+    .Title .Second{
+      width: 70% !important;
+      margin-top: 50px;
+
     }
   }
 
@@ -231,10 +238,10 @@ body {
     right: 0;
     height: 250px;
     overflow: hidden;
-    border-left: 1px solid #4A6FA5;
+    border-left: 1px solid #002734;
     width: 50%;
     background-color: #FAF8F6;
-    border-bottom: 1px solid #4A6FA5;
+    border-bottom: 1px solid #002734;
     transform: translateY(60px);
     opacity: 0;
     transition: 0.4s all linear;
@@ -245,7 +252,7 @@ body {
     width: 50%;
     height: 1px;
     opacity: 1;
-    background-color: #4A6FA5;
+    background-color: #002734;
     position: absolute;
     left: 0;
     top: 60px;
@@ -334,7 +341,7 @@ body {
   }
   .MainLogin form{
     width: 50%;
-    border: 1px solid #4A6FA5;
+    border: 1px solid #002734;
     padding: 20px;
     border-radius: 3px;
   }
@@ -344,7 +351,7 @@ body {
     width: 100%;
   }
   .LoginSec,.PasswordSec{
-    border: 1px solid #4A6FA5;
+    border: 1px solid #002734;
     border-radius: 15px;
     padding: 7px 03px;
     margin: 5px;
@@ -354,7 +361,7 @@ body {
 
     font-weight: bold;
     font-size: large;
-    background-image: linear-gradient(90deg,#304d78,#4A6FA5,#304d78);
+    background-image: linear-gradient(90deg,#304d78,#002734,#304d78);
     color: rgb(235, 235, 235);
     padding: 12px;
     width: 100%;
@@ -369,7 +376,7 @@ body {
   }
   .MainLogin form input[type=button]:active{
     border-radius: 25px;
-    background-color: #4A6FA5;
+    background-color: #002734;
     color: gainsboro;
     transform: scale(1.09);
   }
@@ -404,7 +411,7 @@ body {
 }
  .right {
 	 flex: 1;
-	 background-color: black;
+	 background-color: #002734;
 	 transition: 1s;
 	 background-image: url(https://f.i.uol.com.br/fotografia/2019/09/27/15696107995d8e5c2f6ffe4_1569610799_5x2_lg.jpg);
 	 background-size: cover;
