--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,10 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+*{
+  font-family: 'Work Sans', sans-serif;
 
+}
 body {
   color: #002734;
   background-color: #e0e5e9;
