--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,600;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@500&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,10 +18,6 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
-*{
-  font-family: 'Work Sans', sans-serif;
-
 }
 body {
   color: #002734;
