--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -525,10 +525,10 @@ body {
     text-align: left;
     width: 100%;
     font-size: 2.8rem;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Playfair Display', serif !important;
 }
 .First h1 span{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Playfair Display', serif !important;
     font-weight: 700;
     font-style: italic;
 }
@@ -606,17 +606,17 @@ margin: 5px;
     font-weight: bold;
 }
 .Benefícios h1{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Playfair Display', serif !important;
     font-weight: 700;
     letter-spacing:  2px;
     font-style: italic;
 }
 .Suporte h1{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Playfair Display', serif !important;
 
 }
 .Segurança h1{
-    font-family: 'Staatliches', cursive;
+    font-family: 'Staatliches', cursive !important;
 }
 .Inovação h1{
     font-family: 'Bodoni Moda', serif;
