--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,19 @@
   transform: translateY(10px);
   margin-bottom: 20px;
 }
+body{
+  color: #1A237E;
+}
+.MainPage{
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.267);
+}
+.StartImage {
+  background-image: url(/src/imgs/bg-header.jpg);
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+  background-size: cover; /* Redimensiona a imagem para cobrir o elemento */
+}
 .tablePage{
   padding: 10px;
 }
@@ -38,20 +51,10 @@ bottom: -100px;
   bottom: -100px;
 }
 }
-.StartImage {
-  background-image: url(/src/imgs/bg-header.jpg);
-  background-repeat: no-repeat;
-  height: 110vh;
-  width: 100%;
-  background-size: cover; /* Redimensiona a imagem para cobrir o elemento */
-}
+
 .StartContent{
   margin: 10px;
   margin-top: 0px;
-}
-#root{
-  background-color: rgb(243, 243, 243);
-  margin: 0;
 }
 
 .hero{
@@ -63,7 +66,6 @@ bottom: -100px;
   margin-left: 50px;
   margin-right: 50px;
   border-radius: 10px;
-  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -74,9 +76,25 @@ bottom: -100px;
   margin-top: 30px;
   font-size: 2.6rem;
   font-weight: bold;
-  color: #23095c;
 }
 .MainPage h4{
   font-size: medium;
   margin: 20px;
+}
+img.imgmain{
+  animation: BreathImg 5s linear infinite;
+}
+
+@keyframes BreathImg {
+  0%{
+    transform: translateY(0px);
+  }
+  50%{
+    transform: translateY(20px);
+
+  }
+  100%{
+    transform: translateY(0px);
+
+  }
 }
