--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body{
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.267);
 }
 .StartImage {
+  margin-top: -70px;
   background-image: url(/src/imgs/bg-header-removebg-preview.png);
   background-repeat: no-repeat;
   height: 100vh;
@@ -174,4 +175,8 @@ img.imgmain{
     10px 10px 0px #FFD662, 
     12px 12px 0px #FFB650;
   }
+}
+.texto{
+  color: #00A8F4;
+
 }
