--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,6 @@
   margin: 20px;
   z-index: -1;
 }
-body{
-}
 .MainPage{
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.267);
 }
@@ -90,7 +88,10 @@ bottom: -100px;
 .inicial{
   color: #016897 !important;
 }
-
+.inicial p{
+  color: white;
+  text-shadow: 0px 0px 3px black;
+}
 .MainPage h1{
   margin-top: 30px;
   font-size: 2.6rem;
@@ -181,4 +182,7 @@ img.imgmain{
 .texto{
   color: #00A8F4;
 
+}
+footer{
+  background-color: #036b9b;
 }
