--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@media (max-width: 1405px) and (min-width: 425px) {
+    .hero > * {
+        width: 80% !important; /* Reduz a largura do elemento */
+        max-width: 100% !important; /* Garante que o elemento não exceda a largura da tela */
+    }
+}
+@media (max-width: 1020px){
+    .hero div button{
+      display: none;
+    }
+    .hero div p{
+        display: none;
+    }
+}
