--- a/src/App.css
+++ b/src/App.css
@@ -257,6 +257,11 @@ footer{
   align-items: center;
   justify-content: center;
 }
+@media screen and (max-width: 768px){
+  .nome{
+  font-size: 60px;
+  }
+  }
 .X{
   margin: 10px;
   color: rgb(167, 80, 80);
