--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,9 @@ left: 0;
   width: 100%;
   background-size: cover; /* Redimensiona a imagem para cobrir o elemento */
 }
+.tabela{
+  background-color: rgba(161, 165, 223, 0.26);
+}
 .tablePage{
   padding: 10px;
 }
