--- a/src/App.css
+++ b/src/App.css
@@ -54,11 +54,16 @@ left: 0;
   border-radius: 10px 10px 0px 0px;
   margin-top: 10px;
 } 
+.insitmenu{
+  margin: 2rem;
+} 
 .InfoAll{
   display: flex; 
   margin: 0px;
   padding: 10px;
-  border-top: 2px solid #00A8F4;
+  margin-bottom: 150px;
+  border-top: 5px solid #00A8F4;
+  border-radius: 5px;
   background-color: white;
 }
 .navbar {
@@ -208,12 +213,18 @@ section .air.air4{
 .tablePage{
   padding: 10px;
 }
+tr {
+  width: 100%;
+}
 .alert{
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.445);
-  position: fixed;
-  bottom: -100px;
+box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.445);
+position: fixed;
+bottom: -100px;
 margin: 0;
 left: 10px;
+display: flex;
+justify-content: center;
+align-items: center;
 margin-right: 10px;
 width: calc(100% - 20px);
 animation: alert 4s linear;
@@ -262,7 +273,7 @@ bottom: -100px;
   color: white;
 }
 .texto-aparecer{
-	animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	/*animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;*/
 
 }
 @keyframes text-focus-in {
@@ -372,7 +383,7 @@ img.imgmain{
 .actions2{
   margin-bottom: 100px;
   width: 100%;
-  overflow: scroll;
+  overflow-x: auto;
   align-items: center !important;
   justify-content: center;
 }
